fix: width of icons on mobile

--- a/src/components/sections/MorphsUnique/style.module.scss
+++ b/src/components/sections/MorphsUnique/style.module.scss
@@ -77,6 +77,10 @@
     gap: 18px;
     justify-content: flex-start;
   }
+  @media screen and (max-width: $s-tablet){
+    gap: 18px;
+    justify-content: space-evenly;
+  }
 }
 
 .skillImg {
